--- a/myapi_k8s/template.yml
+++ b/myapi_k8s/template.yml
@@ -9,7 +9,7 @@ spec:
   initContainers:
   - name: add-files-to-home
     image: busybox
-    command: ['sh', '-c', 'rm /tmp -rf && mkdir /tmp && chown 1000:1000 /home/ubuntu && chmod 700 /home/ubuntu && tar xf /all.tar -C /home/ubuntu']
+    command: ['sh', '-c', 'chown 1000:1000 /home/ubuntu && chmod 700 /home/ubuntu && tar xf /all.tar -C /home/ubuntu']
     volumeMounts:
     - name: homenas
       mountPath: /home/ubuntu
@@ -33,6 +33,8 @@ spec:
     - name: homenas
       mountPath: /home/ubuntu
       subPath: guest
+    - name: dshm
+      mountPath: /dev/shm
   nodeSelector:
     kubernetes.io/hostname: lab304-server2
   volumes:
@@ -42,3 +44,6 @@ spec:
   - name: homenas
     persistentVolumeClaim:
       claimName: nfs-homenas
+  - name: dshm
+    emptyDir:
+      medium: Memory
