--- a/k8s/traefik.yml
+++ b/k8s/traefik.yml
@@ -1,4 +1,4 @@
-externalIP: <ip>
+externalIP: {{ ip }}
 memoryLimit: 1G
 rbac:
   enabled: true
@@ -20,5 +20,5 @@ ssl:
   enabled: true
   enforced: true
   insecureSkipVerify: true
-  defaultCert: <cert>
-  defaultKey: <key>
+  defaultCert: {{ cert }}
+  defaultKey: {{ key }}
