--- a/k8s/myapi_k8s_set.yml
+++ b/k8s/myapi_k8s_set.yml
@@ -4,8 +4,12 @@ metadata:
   name: myapi-k8s
 rules:
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["pods"]
-  verbs: ["get", "watch", "list", "create", "delete"]
+  resources: ["pods", "services"]
+  verbs: ["get", "list", "create", "delete"]
+
+- apiGroups: ["extensions"]
+  resources: ["ingresses"]
+  verbs: ["get", "list", "create", "delete"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -43,7 +47,6 @@ spec:
       containers:
       - name: myapi-k8s
         image: harbor.default.svc.cluster.local/linnil1/myapi_k8s
-        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3476
           protocol: TCP
