--- a/labboxapi_k8s/Dockerfile
+++ b/labboxapi_k8s/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7-slim
-RUN pip3 install --no-cache-dir flask docker gunicorn
+RUN pip3 install --no-cache-dir kubernetes flask gunicorn pyaml
 RUN mkdir /app
 WORKDIR /app
 EXPOSE 3476
