--- a/k8s/labboxdb_redis.yml
+++ b/k8s/labboxdb_redis.yml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: box-redis
+  name: labboxdb-redis
 spec:
   selector:
-    name: box-redis
+    name: labboxdb-redis
   ports:
   - port: 6379
     targetPort: 6379
@@ -13,19 +13,19 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: box-redis
+  name: labboxdb-redis
 spec:
   selector:
     matchLabels:
-      name: box-redis
+      name: labboxdb-redis
   replicas: 1
   template:
     metadata:
       labels:
-        name: box-redis
+        name: labboxdb-redis
     spec:
       containers:
-      - name: box-redis
+      - name: labboxdb-redis
         image: redis:5
         ports:
         - containerPort: 6379
