--- a/k8s/lab_ingress.yml
+++ b/k8s/lab_ingress.yml
@@ -34,7 +34,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: oauthserver
+  name: labboxmain
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
@@ -43,6 +43,6 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: oauthserver
+          serviceName: labboxmain
           servicePort: 5000
 
