--- a/Nextcloud/nginx-k8s.conf
+++ b/Nextcloud/nginx-k8s.conf
@@ -56,6 +56,10 @@ http {
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
         add_header Strict-Transport-Security "max-age=31536000;"  always;
+        add_header Referrer-Policy no-referrer;
+
+        # Remove X-Powered-By, which is an information leak
+        fastcgi_hide_header X-Powered-By;
 
         root /var/www/html;
         location = /robots.txt {
@@ -96,19 +100,20 @@ http {
         location / {
             rewrite ^ /index.php$uri;
         }
-        location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+
+        location ~ ^\/(?:build|tests|config|lib|3rdparty|templates|data)\/ {
             deny all;
         }
-        location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
+        location ~ ^\/(?:\.|autotest|occ|issue|indie|db_|console) {
             deny all;
         }
 
-        location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
-            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+)\.php(?:$|\/) {
+            fastcgi_split_path_info ^(.+?\.php)(\/.*|)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
-            # fastcgi_param HTTPS on;
+            fastcgi_param HTTPS on;
             #Avoid sending the security headers twice
             fastcgi_param modHeadersAvailable true;
             fastcgi_param front_controller_active true;
@@ -117,7 +122,7 @@ http {
             fastcgi_request_buffering off;
         }
 
-        location ~ ^/(?:updater|ocs-provider)(?:$|/) {
+        location ~ ^\/(?:updater|oc[ms]-provider)(?:$|\/) {
             try_files $uri/ =404;
             index index.php;
         }
@@ -144,6 +149,7 @@ http {
             add_header X-Robots-Tag none;
             add_header X-Download-Options noopen;
             add_header X-Permitted-Cross-Domain-Policies none;
+            add_header Referrer-Policy no-referrer;
             # Optional: Don't log access to assets
             access_log off;
         }
