--- a/k8s/collect_gpu.yml
+++ b/k8s/collect_gpu.yml
@@ -20,7 +20,7 @@ spec:
           subPath: collectgpu
         - name: volume
           mountPath: /app/db.sqlite
-          subPath: OauthServer/db.sqlite
+          subPath: labboxmain/db.sqlite
           readOnly: True
         ports:
         - containerPort: 8000
