Add emergency stoy for labboxmain and fix some bugs

--- a/k8s/labboxapi_docker.yml
+++ b/k8s/labboxapi_docker.yml
@@ -22,6 +22,7 @@ spec:
     metadata:
       labels:
         name: labboxapi-docker
+        app: labbox
     spec:
       containers:
       - name: labboxapi-docker
