--- a/k8s/labboxdb_redis.yml
+++ b/k8s/labboxdb_redis.yml
@@ -23,6 +23,7 @@ spec:
     metadata:
       labels:
         name: labboxdb-redis
+        app: labbox
     spec:
       containers:
       - name: labboxdb-redis
