Run command and log in api_k8s

--- a/labboxapi_k8s/pod.yml
+++ b/labboxapi_k8s/pod.yml
@@ -25,6 +25,7 @@ spec:
     # imagePullPolicy: Always
     # command: [tail]
     # args: ['-f', '/dev/null']
+    # restartPolicy: Never
     ports:
     - containerPort: 22
     - containerPort: 5900
