--- a/Nextcloud/nginx-k8s.conf
+++ b/Nextcloud/nginx-k8s.conf
@@ -75,10 +75,10 @@ http {
         # last;
 
         location = /.well-known/carddav {
-            return 301 $scheme://$host/remote.php/dav;
+            return 301 $scheme://$host:$server_port/remote.php/dav;
         }
         location = /.well-known/caldav {
-            return 301 $scheme://$host/remote.php/dav;
+            return 301 $scheme://$host:$server_port/remote.php/dav;
         }
 
         # set max upload size
@@ -98,7 +98,7 @@ http {
         #pagespeed off;
 
         location / {
-            rewrite ^ /index.php$uri;
+            rewrite ^ /index.php$request_uri;
         }
 
         location ~ ^\/(?:build|tests|config|lib|3rdparty|templates|data)\/ {
@@ -129,8 +129,8 @@ http {
 
         # Adding the cache control header for js and css files
         # Make sure it is BELOW the PHP block
-        location ~ \.(?:css|js|woff|svg|gif)$ {
-            try_files $uri /index.php$uri$is_args$args;
+        location ~ \.(?:css|js|woff2?|svg|gif|map)$ {
+            try_files $uri /index.php$request_uri;
             add_header Cache-Control "public, max-age=15778463";
             # Add headers to serve security related headers (It is intended to
             # have those duplicated to the ones above)
