--- a/collect_gpu_processes/Dockerfile
+++ b/collect_gpu_processes/Dockerfile
@@ -4,6 +4,6 @@ RUN apt update -y && \
     rm -rf /var/lib/apt/lists/* && \
     pip3 install --no-cache-dir psutil prometheus_client
 RUN mkdir /app
-COPY collect_gpu.py /app/collect_gpu.py
+COPY collect_gpu_processes.py /app/collect_gpu_processes.py
 WORKDIR /app
-CMD ["python3", "/app/collect_gpu.py"]
+CMD ["python3", "/app/collect_gpu_processes.py"]
