Refactor: Add docstring on labboxapi-k8s

--- a/labboxapi_k8s/pod.yml
+++ b/labboxapi_k8s/pod.yml
@@ -4,38 +4,38 @@ metadata:
   name: test
   namespace: user
   labels:
-    UserDocker: "true"
+    labbox-user: "true"
     srvname: "test"
 spec:
   initContainers:
   - name: add-files-to-home
     image: busybox
-    command: ['sh', '-c', 'chown 1000:1000 /home/ubuntu && chmod 700 /home/ubuntu && tar xf /all.tar -C /home/ubuntu']
+    command: ["sh", "-c", "chown 1000:1000 /home/ubuntu && chmod 700 /home/ubuntu && tar xf /all.tar -C /home/ubuntu"]
     volumeMounts:
-    - name: homenas
-      mountPath: /home/ubuntu
-      subPath: guest
     - name: homenas
       mountPath: /all.tar
       subPath: server/ServerBox/all.tar
       readOnly: true
+    # - name: homenas
+    #   mountPath: /home/ubuntu
+    #   subPath: guest
+  restartPolicy: Never
   containers:
-  - name: test
+  - name: main
     image: nvidia/cuda:10.0-cudnn7-devel-ubuntu18.04
-    # imagePullPolicy: Always
-    # command: [sudo]
-    # args: ['bash', '-c', 'echo 123']
-    restartPolicy: Never
+    imagePullPolicy: IfNotPresent
+    # command: [tail]
+    # args: ["-f", "/dev/null"]
     ports:
     - containerPort: 22
     - containerPort: 5900
     - containerPort: 8000
     volumeMounts:
-    - name: labnas
-      mountPath: /home/nas
-    - name: homenas
-      mountPath: /home/ubuntu
-      subPath: guest
+    # - name: labnas
+    #   mountPath: /home/nas
+    # - name: homenas
+    #   mountPath: /home/ubuntu
+    #   subPath: guest
     - name: homenas
       mountPath: /home/share
       subPath: share
@@ -46,15 +46,16 @@ spec:
     env:
     - name: node
       value: lab304-server2
+
   nodeSelector:
     kubernetes.io/hostname: lab304-server2
   volumes:
-  - name: labnas
-    persistentVolumeClaim:
-      claimName: nfs-labnas
-  - name: homenas
-    persistentVolumeClaim:
-      claimName: nfs-homenas
+  #- name: labnas
+  #  persistentVolumeClaim:
+  #    claimName: nfs-labnas
+  #- name: homenas
+  #  persistentVolumeClaim:
+  #    claimName: nfs-homenas
   - name: dshm
     emptyDir:
       medium: Memory
