--- a/k8s/labboxapi_k8s.yml
+++ b/k8s/labboxapi_k8s.yml
@@ -11,9 +11,13 @@ rules:
   resources: ["ingresses"]
   verbs: ["get", "list", "create", "delete"]
 
-- apiGroups: [""]  # testing
+- apiGroups: [""]
   resources: ["pods/exec", "pods/log"]
   verbs: ["create", "get", "list"]
+
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["list"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
