Upgrade nextcloud and little fix

--- a/Nextcloud/Dockerfile
+++ b/Nextcloud/Dockerfile
@@ -1,3 +1,4 @@
-FROM nextcloud:16-fpm
+FROM nextcloud:19-fpm
+RUN apt update && apt install sudo -y
 RUN usermod -u 1000 www-data && \
     groupmod -g 1000 www-data 
