Move setting to one file

--- a/k8s/nextcloud_collabora.yml
+++ b/k8s/nextcloud_collabora.yml
@@ -32,4 +32,4 @@ spec:
           protocol: TCP
         env:
         - name: domain
-          value: my.domain.ntu.edu.tw
+          value: {{ domain }}
