--- a/Nextcloud/nginx-k8s.conf
+++ b/Nextcloud/nginx-k8s.conf
@@ -28,21 +28,21 @@ http {
     gzip  on;
 
     upstream php-handler {
-        server nextcloud-fpm.user.svc.cluster.local:9000;
+        server nextcloud-fpm.user.svc:9000;
     }
 
     server {
         listen              443 ssl;
-        server_name         my.domain.ntu.edu.tw;
+        server_name         {{ domain }};
 
         ssl_certificate_key /certs/privkey.pem;
         ssl_certificate     /certs/fullchain.pem;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
-        error_page 497      https://$server_name:443/drive$request_uri;
+        error_page 497      https://$server_name:$server_port/drive$request_uri;
 
         location ~ ^/drive {
-            return 302      https://$server_name:443$request_uri;
+            return 302      https://$server_name:$server_port$request_uri;
         }
 
         # WARNING: Only add the preload option once you read about
@@ -162,19 +162,19 @@ http {
 
         # static files
         location ^~ /loleaflet {
-            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc:9980;
             proxy_set_header Host $http_host;
         }
 
         # WOPI discovery URL
         location ^~ /hosting/discovery {
-            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc:9980;
             proxy_set_header Host $http_host;
         }
 
         # main websocket
         location ~ ^/lool/(.*)/ws$ {
-            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc:9980;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $http_host;
@@ -183,13 +183,13 @@ http {
 
         # download, presentation and image upload
         location ~ ^/lool {
-            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc:9980;
             proxy_set_header Host $http_host;
         }
 
         # Admin Console websocket
         location ^~ /lool/adminws {
-            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc:9980;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $http_host;
