--- a/k8s/pv.yml
+++ b/k8s/pv.yml
@@ -10,8 +10,8 @@ spec:
   capacity:
     storage: 30Ti
   nfs:
-    server: {{ LABSERVER_IP }}
-    path: {{ LABSERVER_PATH }}
+    server: {{ nfs.server_ip }}
+    path: {{ nfs.server_path }}
 
 ---
 kind: PersistentVolumeClaim
