--- a/k8s/traefik.yml
+++ b/k8s/traefik.yml
@@ -1,4 +1,4 @@
-externalIP: {{ ip }}
+externalIP: {{ external_ip }}
 rbac:
   enabled: true
 dashboard:
@@ -20,5 +20,5 @@ ssl:
   enabled: true
   enforced: true
   insecureSkipVerify: true
-  defaultCert: {{ cert }}
-  defaultKey: {{ key }}
+  defaultCert: null
+  defaultKey: null
